<resources>
    <string name="app_name">Ya Ganaste</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBJY6xouGAtwh5F9brJlXn1u8juF7P4VBs
    </string>
    <string name="consultaInformacionAgente">/ConsultarInformacionAgente</string>
    <string name="activateMobileServiceUrl">/ActivacionServicioMovil</string>
    <string name="updateAvatarUrl">/ActualizarAvatar</string>
    <string name="updateDocumentosUrl">/ActualizarDocumentos</string>
    <string name="Documentos">Documentos</string>
    <string name="updateSessionUrl">/ActualizarInformacionSesionUyu</string>
    <string name="assignPaswordUrl">/AsignarContrasena</string>
    <string name="assignAccountAvailableUrl">/AsignarCuentaDisponible</string>
    <string name="assignNIPUrl">/AsignarNIP</string>
    <string name="changePasswordUrl">/CambiarContrasena</string>
    <string name="uploadDocumentsUrl">/CargaDocumentos</string>
    <string name="logoutUrl">/CerrarSesion</string>
    <string name="consultAssignCardUrl">/ConsultarAsignacionTarjeta</string>
    <string name="getMovementsByMonthUrl">/ConsultarMovimientosMes</string>
    <string name="validate_data_person">/ValidarDatosPersona</string>
    <string name="validate_data_person_curp">/ValidarDatosCurp</string>
    <string name="cambia_status_operador">/CambiarEstatusUsuario</string>
    <string name="getBalanceUrl">/ConsultarSaldo</string>
    <string name="getAccountOwnerUrl">/ConsultarTitularCuenta</string>
    <string name="createAgentUrl">/CrearAgente</string>
    <string name="createAgentWallet">/CrearAgenteWallet</string>
    <string name="createUserClientUrl">/CrearUsuarioClienteWallet</string>
    <string name="executeTransactionUrl">/EjecutarTransaccion</string>
    <string name="deleteAvatarUrl">/EliminarAvatar</string>
    <string name="loginUrl">/IniciarSesion</string>
    <string name="loginSimpleUrl">/IniciarSesionSimple</string>
    <string name="loginSimpleUyU">/IniciarSesionSimpleUYU</string>
    <string name="searchOfficesUrl">/LocalizarSucursales</string>
    <string name="getCatalogsUrl">/ObtenerCatalogos</string>
    <string name="getBancoBin">/ObtenerDatosBancarios</string>
    <string name="getNeighborhoodByZipUrl">/ObtenerColoniasPorCP</string>
    <string name="getDocuments">/ObtenerDocumentos</string>
    <string name="getSMSNumberUrl">/ObtenerNumeroSMS</string>
    <string name="recoverPasswordUrl">/RecuperarContrasena</string>
    <string name="validateStatusTransactionUrl">/ValidarEstatusTransaccion</string>
    <string name="validateStatusUserUrl">/ValidarEstatusUsuario</string>
    <string name="validateFormatPasswordUrl">/ValidarFormatoContrasena</string>
    <string name="verifyActivateUrl">/VerificarActivacion</string>
    <string name="imageResourceUrl">/RecursoImagen</string>
    <string name="activateAprovSoftTokenUrl">/ActivacionAprovSofttoken</string>
    <string name="verifyActivateAprovSoftTokenUrl">/VerificarActivacionAprovSofttoken</string>
    <string name="initOnlineTransactionUrl">/IniciarTransaccionOnline</string>
    <string name="getJsonWebTokenUrlUrl">/GetJsonWebTokenUrl</string>
    <string name="fondearCupoUrl">/FondearCupo</string>
    <string name="getBalanceAdqUrl">/ConsultarSaldoADQ</string>
    <string name="getSucursales">/LocalizarSucursales</string>
    <string name="obtenerSubgiros">/ObtenerSubgirosWallet</string>
    <string name="obtenerGirosComerciales">/ObtenerGirosComerciales</string>
    <string name="obteneroperadores">/ObtenerOperadores</string>
    <string name="obtenerresumendia">/agMov/ObtenerResumenDia?fecha=</string>
    <string name="obtenerDomicilioPrincipal">/ObtenerDomicilioPrincipal</string>
    <string name="obtenerDomicilio">/ObtenerDomicilioPrincipal</string>
    <string name="enviarTicketTAEPDS">/EnviarTicketTAEPDS</string>
    <string name="enviarTicket">/EnviarTicket</string>
    <string name="desasociarDispositivo">/DesasociarDispositivo</string>
    <string name="obtenerDatosCuenta">/ObtenerDatosCuenta</string>
    <string name="bloquearDatosCuenta">/BloquearTemporalmenteTarjeta</string>
    <string name="estatusDatosCuenta">/ObtenerEstatusTarjeta</string>
    <string name="generate_rpc">/GenerarCodigoRecuperacionSoftToken</string>
    <string name="enviarCorreo">/EnviarCorreoContactanos</string>
    <string name="consultarFavorito">/ConsultarFavorito</string>
    <string name="consultarDatosPersonaStar">/ConsultarInformacionPersona</string>
    <string name="addFavoritos">/AgregarFavorito</string>
    <string name="addFotoFavoritos">/ActualizarImagenFavorito</string>
    <string name="updateFavoritos">/ActualizarFavorito</string>
    <string name="deleteFavorito">/EliminarFavorito</string>
    <string name="url_images_logos">https://www.yaganaste.com/Logos/</string>
    <string name="obtenerCobrosMensuales">/ObtenerCatalogoOperacionesPLD</string>
    <string name="obtenerPaisesPLD">/ObtenerPaisesPLD</string>
    <string name="obtenerMontos">/ObtenerCatalogoMontosPLD</string>
    <string name="obtenerOrigenRecursos">/ObtenerCatalogoOrigenRecursosPLD</string>
    <string name="obtenerDestinoRecursos">/ObtenerCatalogoDestinoRecursosPLD</string>
    <string name="obtenerVersionAplicacion">/ObtenerVersionAplicacion</string>
    <string name="cancelarCuenta">/CancelarCuenta</string>
    <string name="adqConsultarInformacionComercio">/ConsultarInformacionComercio</string>
    <string name="adqLogin">/agMov/login</string>
    <string name="adqRegisterDongle">/agMov/register_dongle</string>
    <string name="adqTransactionEmv">/agMov/transactionEmvDepositAccount</string>
    <string name="adqConsultarSaldoCard">/agMov/consultaSaldoCard</string>
    <string name="adqRegisterNIP">/agMov/nip</string>
    <string name="adqGetSessionAgente">/agMov/sesion_agente</string>
    <string name="adqRegisterDeviceData">/agMov/registerDeviceData</string>
    <string name="adqRegisterNotification">/agMov/registerNotifications</string>
    <string name="adqAuthNIP">/gMov/auth_nip</string>
    <string name="adqTransactionCard">/agMov/transactionEMVSwipe</string>
    <string name="adqSignatureVaucher">/agMov/signBankTransaction</string>
    <string name="adqConsultTransaction">/agMov/getStatusTransactionEMVSwipe</string>
    <string name="adqSendTicket">/agMov/sendTicketADQ</string>
    <string name="adqResumeDay">/agMov/getResumenYG?fecha=</string>
    <string name="adqResumeMonth">/agMov/getResumenMonthYG?fecha=</string>
    <string name="adqMovimientos">/agMov/Movimientos</string>
    <string name="adqGetBalance">/agMov/getSaldo</string>
    <string name="adqGetSaldoAdm">/agMov/ObtenerSaldo</string>
    <string name="adqGetDatosCupo">/agMov/ObtieneDatosCupo</string>
    <string name="cancelationTransactionEmv">/agMov/CancellationTransactionEmvDeposit</string>
    <string name="adqGetTypeRepayment">/agMov/ObtieneTipoReembolso</string>
    <string name="adqUpdateTypeRepayment">/agMov/ActualizaTipoReembolso</string>
    <string name="adqReembolso">/agMov/ReembolsoOnDemandYG</string>
    <string name="adqDetalleMovimiento">/agMov/DetalleMovimiento</string>
    <string name="loginstarbucks">:17443/wsrewards/LoginMobile</string>
    <string name="forgetpasswordstarbucks">:17443/wsrewards/RecuperarContraseniaMobile</string>
    <string name="fbRegisterToken">/RegistrarTokenFireBase</string>
    <string name="sbMovements">:17443/wsrewards/ConsultaMovimientosPorCuenta</string>
    <string name="sbSaldo">:17443/wsrewards/ConsultaSaldoMobile</string>
    <string name="registrocomplete">:17443/wsrewards/RegistroMobile</string>
    <string name="preregisterstarbucks">:17443/wsrewards/ValidaTarjetaMovil</string>
    <string name="registerCompleteStarbucks">:17443/wsrewards/RegistroMobile</string>
    <string name="get_stores_starbucks">:16443/CatalogosStarbucks.svc/getStores</string>
    <string name="cupoCrearSolicitudCupo">/CrearSolicitudCupo</string>
    <string name="cupoCargaDocumentos">/CargaDocumentosCupo</string>
    <string name="cupoObtenerSolicitudCupo">/ObtenerSolicitudCupo</string>
    <string name="cupoObtenerEstadoDeDocumentos">/ObtenerDocumentosCupo</string>
    <string name="cupoActualizaDocumentosCupo">/ActualizaDocumentosCupo</string>
    <string name="cupoActualizaReferenciasCupo">/ActualizarReferenciaCupo</string>
    <string name="getQrs">/gtQRSYG</string>
    <string name="validateQr">/vldtLnkPltYG</string>
    <string name="linkedQr">/lnkQRYG</string>
    <string name="updateTokenFirebase">/updateUserDeviceToken</string>
    <string name="newQr">/nwQRYG</string>
    <string name="updateQR">/pdtQR</string>
    <string name="getDataQRYG">/getDataQRYG</string>
    <string name="ntfyMrchntYG">/ntfyMrchntYG</string>
    <string name="next">Continuar</string>
    <string name="ingress_your_data_card">Ingresa los datos de tu tarjeta</string>
    <string name="card_number">Número de tarjeta (%1$s dígitos)</string>
    <string name="not_have_card">NO TENGO TARJETA</string>
    <string name="txt_change_pass">Cambiar Contraseña</string>
    <string name="main_tab_inicio">Inicio</string>
    <string name="main_tab_pagos">Pagar</string>
    <string name="main_tab_send">Enviar</string>
    <string name="main_tab_qr">Mis QR</string>
    <string name="main_tab_cobros">Cobrar</string>
    <string name="skipButton">Más tarde</string>
    <string name="YesButton">Sí</string>
    <string name="adq_message_hardsell">La solución más completa\ny la más económica</string>
    <string name="adq_title_hardsell">Cobra con tarjeta y</string>
    <string name="adq_subtitle_hardsell">¡Paga menos comisión!</string>
    <string name="adq_more_hardsell">Conoce Más</string>
    <string name="numero">01 800 500 1000</string>
    <string name="comenzar_registro">Registrar mi negocio</string>
    <string name="mas_info"><u>Más información</u></string>
    <string name="navigation_drawer_menu_seguridad">Seguridad</string>
    <string name="navigation_drawer_menu_chat">Chat</string>
    <string name="navigation_drawer_menu_ajustes">Ajustes</string>
    <string name="navigation_drawer_menu_acerca">Acerca de</string>
    <string name="hint_search">Buscar</string>
    <string name="title_tipo_uno">Estamos validando tu registro</string>
    <string name="title_tipo_desc">En este momento tus documentos están siendo\nrevisados, puede tomarnos hasta 48 horas</string>
    <string name="contacto">contacto@yaganaste.com</string>
    <string name="btn_reenviar">Reenviar</string>
    <string name="felicidades">¡Felicidades!</string>
    <string name="ya_se_puede">Ya puedes comenzar a recibir pagos con\ntarjeta ¡al mejor precio!</string>
    <string name="title_pair_bluetooth">Enlazar Lector de Tarjetas</string>
    <string name="bluetooth_on">Bluetooth activado</string>
    <string name="bluetooth_instructions">Enciende tu lector de tarjetas Ya Ganaste\n presionando el botón:</string>
    <string name="bluetooth_instructions2">Manténlo presionado hasta que leas\nen pantalla “Bienvenido”</string>
    <string name="bluetooth_devices">Lectores Ya Ganaste encontrados:</string>
    <string name="title_block_card">Bloquear Tarjeta Ya Ganaste</string>
    <string name="label_des_block_card">Selecciona el tipo de bloqueo\nque mejor se adapte a tus necesidades</string>
    <string name="label_option_tem_title">Bloqueo temporal</string>
    <string name="label_option_tem_subtitle">Podrás seguir usando tu tarjeta al desbloquearla</string>
    <string name="label_option_per_title">Bloqueo Permanente</string>
    <string name="label_option_per_subtitle">Cancela tu tarjeta y solicita un nuevo plástico</string>
    <string name="settings_security">Ajustes de Seguridad</string>
    <string name="titleBiometrics">Huella Digital</string>
    <string name="subtitleBiometrics">Autorizar operaciones con biométricos</string>
    <string name="titleBalances">Mostrar Saldos</string>
    <string name="subtitleBalances">Ver tu saldo en accesos rápidos</string>
</resources>