<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@mipmap/ic_seguridad"
            android:title="@string/navigation_drawer_menu_seguridad" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@mipmap/bell"
            android:title="@string/navigation_drawer_menu_chat" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@mipmap/ic_ajustes"
            android:title="@string/navigation_drawer_menu_ajustes" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@mipmap/ic_acerca"
            android:title="@string/navigation_drawer_menu_acerca" />
    </group>

</menu>