<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lets_start"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui._controllers.AccountActivity">

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/titleHardsell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/adq_title_hardsell"
        android:textColor="@color/grayColor" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/subtitleHardsell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleHardsell"
        android:gravity="center"
        android:text="@string/adq_subtitle_hardsell"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/imgHardsell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subtitleHardsell"
        android:adjustViewBounds="true"
        android:padding="10dp"
        android:scaleType="centerCrop"
        android:src="@mipmap/main_card_zoom_blue" />


    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgHardsell"
        android:gravity="center"
        android:text="@string/adq_more_hardsell"
        android:textColor="@color/grayColor" />


    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/layoutBtnHardsell"
        android:layout_marginBottom="@dimen/margin_small"
        android:gravity="center"
        android:text="@string/adq_message_hardsell"
        android:textColor="@color/grayColor" />


    <LinearLayout
        android:id="@+id/layoutBtnHardsell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:orientation="horizontal"
        android:padding="@dimen/margin_small">

        <com.pagatodo.yaganaste.utils.customviews.StyleButton
            android:id="@+id/btnHardSellSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skipButton"
            android:textAllCaps="true"
            android:textSize="@dimen/generic_button_normal_text_size" />

        <com.pagatodo.yaganaste.utils.customviews.StyleButton
            android:id="@+id/btnHardSellNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/YesButton"
            android:textAllCaps="true"
            android:textSize="@dimen/generic_button_normal_text_size" />
    </LinearLayout>

</RelativeLayout>