<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/letrero_imageview"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="17dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_check_success"
        android:visibility="visible" />

    <TextView
        android:id="@+id/txt_title"
        style="@style/generic_text_style_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_below="@id/letrero_imageview"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:text="@string/felicidades"
        android:textSize="@dimen/size_text_style_2_half_value"
        android:textColor="@color/colorAccent" />

    <TextView
        android:id="@+id/txt_subtitle"
        style="@style/generic_text_style_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_below="@id/txt_title"
        android:textSize="@dimen/size_text_style_3_value"
        android:text="@string/ya_se_puede"
        android:textColor="@color/texthint" />

    <com.pagatodo.yaganaste.utils.customviews.StyleButton
        android:id="@+id/btn_begin_register"
        style="@style/buttonSquareRoundedBlue"
        android:layout_below="@id/txt_subtitle"
        android:layout_marginTop="31dp"
        android:background="@drawable/button_rounded_blue"
        android:text="@string/comenzar_registro" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/mas_info"
        style="@style/generic_text_style_9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_begin_register"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:gravity="center_horizontal"
        android:text="@string/mas_info" />

</RelativeLayout>

