<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui_wallet.fragments.PairBluetoothFragment">

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/title_pair_bluetooth"
        style="@style/generic_text_style_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/title_pair_bluetooth"
        android:textColor="@color/colorAccent" />

    <ImageView
        android:id="@+id/img_bluetooth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_pair_bluetooth"
        android:layout_marginTop="16dp"
        android:src="@drawable/ico_bluetooth" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/desc_bluetooth_on"
        style="@style/generic_text_style_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_bluetooth"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/bluetooth_on"
        android:textColor="@color/gray_text_wallet" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/desc_bluetooth_instructions"
        style="@style/generic_text_style_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_bluetooth_on"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/bluetooth_instructions"
        android:textColor="@color/gray_text_wallet_3"
        android:textSize="@dimen/wallet_text_size_6" />

    <ImageView
        android:id="@+id/img_dongle_button"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_bluetooth_instructions"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_dongle_on" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/desc_bluetooth_instructions_2"
        style="@style/generic_text_style_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/img_dongle_button"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/bluetooth_instructions2"
        android:textColor="@color/gray_text_wallet_3"
        android:textSize="@dimen/wallet_text_size_6" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/founded_devices"
        style="@style/generic_text_style_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/desc_bluetooth_instructions_2"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/bluetooth_devices"
        android:textColor="@color/colorBlueAccent"
        android:textSize="@dimen/wallet_text_size_6"
        android:visibility="gone" />

    <ListView
        android:id="@+id/rcv_founded_devices"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@color/gray_slate"
        android:dividerHeight="1px"
        android:layout_below="@id/founded_devices"
        android:layout_marginTop="5dp"
        android:visibility="gone" />

    <com.pagatodo.yaganaste.utils.customviews.StyleButton
        android:id="@+id/btnSearchDevices"
        style="@style/buttonSquareRoundedBlue"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_error"
        android:background="@drawable/button_rounded_blue"
        android:text="@string/hint_search" />

</RelativeLayout>