<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lets_start"
    android:background="@drawable/bg_gradient_bottom"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui._controllers.AccountActivity">

    <include
        android:id="@+id/toolbarLy"
        layout="@layout/toolbar" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/txtLetsStartTitle"
        style="@style/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbarLy"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:text="@string/ingress_your_data_card" />

    <com.pagatodo.yaganaste.utils.customviews.StyleEdittext
        android:id="@+id/edtxtGetCard"
        style="@style/InputTextForms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtLetsStartTitle"
        android:inputType="number"
        android:maxLength="16" />

    <com.pagatodo.yaganaste.utils.customviews.StyleTextView
        android:id="@+id/txtLetsStartMailDesc"
        style="@style/textDescInputs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtxtGetCard"
        android:text="@string/card_number" />


    <com.pagatodo.yaganaste.utils.customviews.StyleButton
        android:id="@+id/btnNoCard"
        style="@style/buttonRoundedBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnGetCardNext"
        android:layout_marginBottom="@dimen/btn_margin_bottom"
        android:text="@string/not_have_card"
        app:cornerRadius="@dimen/btn_corner_radius" />

    <com.pagatodo.yaganaste.utils.customviews.StyleButton
        android:id="@+id/btnGetCardNext"
        style="@style/buttonRoundedBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/btn_margin_bottom"
        android:text="@string/next"
        app:cornerRadius="@dimen/btn_corner_radius" />


</RelativeLayout>
